se mejora la forma de llamar a make en subdirectorios

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -4,22 +4,13 @@ LIBS 			:= $(shell ls -d */)
 .PHONY: info all clean cleanall
 	
 all:
-	$(foreach DIR,$(LIBS),$(MAKE) -C $(DIR) &&) true
-#
-#
-# all: $(LIBS)
-# $(LIBS):
-# 	$(MAKE) -C $@
+	@-$(foreach DIR,$(LIBS),$(MAKE) -C $(DIR);)
 
 clean:
-	$(foreach DIR,$(LIBS),$(MAKE) -C $(DIR) clean &&) true
-# $(MAKE) -C tinyPTC/ clean
-# $(MAKE) -C picoPNG/ clean
+	@-$(foreach DIR,$(LIBS),$(MAKE) -C $(DIR) clean;)
 	
 cleanall:
-	$(foreach DIR,$(LIBS),$(MAKE) -C $(DIR) cleanall &&) true
-# $(MAKE) -C tinyPTC/ cleanall
-# $(MAKE) -C picoPNG/ cleanall
+	@-$(foreach DIR,$(LIBS),$(MAKE) -C $(DIR) cleanall;)
 
 info:
 	$(info $(LIBS))
